# calt-codebase

./: .gitignore  404.html  AI_CONTEXT.md  DOCUMENTATION.md  Dockerfile  Makefile  README.md  build_docs.py  environment.yml  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
_sh/: generata_dataset.sbatch  train.sbatch
border_basis/: README.md
config/: train_example.yaml  train_partial_sum.yaml  vocab.yaml
dataset_generator_guide/: index.html
docs/: README.md  ai-context.html  custom_dataset_generation.md  dataset_generator_guide.md  index.html  mkdocs.yml  polynomial_problems.md  problem_generator_examples.md  quickstart.md  seq2seq.md  statistics_calculator_examples.md  tokenizer_guide.md
docs/docs/: README.md
groebner_basis/: README.md
notebook/: sandbox.ipynb  useful-code-snippets.ipynb
parity/: README.md
polynomial_problems/: index.html
problem_generator_examples/: index.html
quickstart/: index.html
scripts/: generate.py  numerical_problem_generate.py  other_polynomial_problems.py  other_problems.py  polynomial_problem_generate.py  train.py
scripts_by_sage/: generate.py  other_problems.py  train.py
search/: search_index.json
shared/: README.md  __init__.py  base_postprocessor.py.example  calt_adapter.py  config.py  hooks.py  inspect_cache.py  logging.py  paths.py  plotting.py  preprocess.py  seed.py  user_postprocessor.py
site/: 404.html  index.html  index.md  llms.txt  objects.inv  sitemap.xml
src/: __init__.py  custom_trainer.py  training_utils.py
statistics_calculator_examples/: index.html
tokenizer_guide/: index.html
(+226 files in other folders)
