[project]
name = "calt-experiments"
version = "0.1.0"
description = "Experiments for learning algebraic computations with Transformers"
requires-python = ">=3.11,<3.13"
dependencies = [
    "calt-x>=1.2.0",
    "omegaconf>=2.3.0",
    "matplotlib>=3.7.0",
    "click>=8.0.0",
    "sortedcontainers>=2.4.0",
]

[tool.ruff]
line-length = 100
